fable/test/valid/data_01.f
      program prog
      data num /3/
      write(6, *) num
      end
