fable/test/syntax_error/data_plus_repetition.f
      program prog
      dimension nums(2)
      data nums /+2*3/
      end
